# python-filestate-python

./: README.md  pyproject.toml  requirements.in  requirements.txt
.claude/roadmap/: bug-python-usage-collector-duplicate-visit-param.md  performance-deferred-import-hoist.md  performance-python-functions-utils-name-comparison.md
.wex/: config.yml
.wex/knowledge/readme/: introduction.md
.wex/python/: .last-commit
.wex/python/app_manager/: requirements.txt
src/wexample_filestate_python/: __init__.py
src/wexample_filestate_python/common/: pipy_gateway.py
src/wexample_filestate_python/config_option/: abstract_python_file_content_option.py  add_future_annotations_config_option.py  add_return_types_config_option.py  fix_attrs_config_option.py  fix_blank_lines_config_option.py  format_config_option.py  fstringify_config_option.py  order_class_attributes_config_option.py  order_class_docstring_config_option.py  order_class_methods_config_option.py  order_main_guard_config_option.py  order_module_metadata_config_option.py  python_config_option.py  remove_unused_config_option.py  sort_imports_config_option.py  unquote_annotations_config_option.py
src/wexample_filestate_python/config_value/: python_config_value.py  python_package_readme_config_value.py
src/wexample_filestate_python/const/: name_pattern.py  path.py  python_file.py
src/wexample_filestate_python/file/: python_file.py  python_test_stub_file.py
src/wexample_filestate_python/helper/: package.py
src/wexample_filestate_python/helpers/: package.py  toml.py
src/wexample_filestate_python/operation/: abstract_python_file_operation.py  python_add_future_annotations_operation.py  python_add_return_types_operation.py  python_enforce_spacing_operation.py  python_fix_attrs_operation.py  python_fix_blank_lines_operation.py  python_format_operation.py  python_fstringify_operation.py  python_modernize_typing_operation.py  python_normalize_spacing_operation.py  python_order_class_attributes_operation.py  python_order_class_docstring_operation.py  python_order_class_methods_operation.py  python_order_constants_operation.py  python_order_iterable_items_operation.py  python_order_main_guard_operation.py  python_order_module_classes_operation.py  python_order_module_docstring_operation.py  python_order_module_functions_operation.py  python_order_module_metadata_operation.py  python_order_spacing_operation.py  python_order_type_checking_block_operation.py  python_relocate_imports_operation.py  python_remove_unused_imports_operation.py  python_reorder_content_operation.py  python_sort_imports_operation.py  python_unquote_annotations_operation.py
src/wexample_filestate_python/operations_provider/: python_operations_provider.py
src/wexample_filestate_python/option/: abstract_python_file_content_option.py  add_future_annotations_option.py  add_return_types_option.py  fix_attrs_option.py  fix_blank_lines_option.py  format_option.py  fstringify_option.py  modernize_typing_option.py  order_class_attributes_option.py  order_class_docstring_option.py  (+13 more)
tests/helper/: test_package.py  test_toml.py
tests/helpers/: test_package.py  test_toml.py
wexample_filestate_python/config_option/: python_config_option.py
wexample_filestate_python/config_value/: python_package_readme_config_value.py  python_package_readmin_config_value.py
wexample_filestate_python/const/: name_pattern.py
wexample_filestate_python/helpers/: package.py  source.py  toml.py
wexample_filestate_python/operation/: abstract_modernize_operation.py  abstract_python_file_operation.py  python_add_future_annotations_operation.py  python_add_return_types_operation.py  python_cleanup_py2_compat_operation.py  python_format_operation.py  python_fstringify_operation.py  python_modernize_typing_operation.py  python_quote_annotations_operation.py  python_remove_future_imports_operation.py  python_remove_unused_imports_operation.py  python_sort_imports_operation.py  python_unquote_annotations_operation.py
wexample_filestate_python/operations_provider/: python_operations_provider.py
wexample_filestate_python/options_provider/: python_options_provider.py
wexample_filestate_python/workdir/: python_package_workdir.py  python_packages_suite_workdir.py  python_workdir.py
(+180 files in other folders)
