[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-python"
version = "0.0.37"
description = "Helpers for Python."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "autoflake",
    "black",
    "flynt",
    "isort",
    "networkx",
    "packaging",
    "pydantic>=2,<3",
    "python-dotenv",
    "pyupgrade",
    "tomlkit",
    "wexample-filestate-git==0.0.35",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate-python"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    "src/wexample_filestate_python/py.typed",
]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate_python"
from = "src"
[tool.filestate]
# These dev packages are removed from dependencies if not specified here.
keep = [
  "black",
  "isort"
]