[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-python"
version = "0.0.45"
description = "Helpers for Python."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "wexample-filestate==0.0.55",
    "wexample-helpers-api==0.0.36",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate-python"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate_python"
from = "src"
[tool.filestate]
# These dev packages are removed from dependencies if not specified here.
keep = [
  "black",
  "isort"
]
[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_filestate_python.testing*"]
