[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-filestate-python"
version = "0.0.58"
description = "Helpers for Python."
authors = [{name = "weeger", email = "contact@wexample.com"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "attrs>=23.1.0",
    "autoflake",
    "black",
    "cattrs>=23.1.0",
    "flynt",
    "isort",
    "libcst",
    "packaging",
    "pyupgrade",
    "tomli",
    "wexample-api==0.0.83",
    "wexample-filestate==0.0.74",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-filestate-python"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_filestate_python.testing*"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_filestate_python"
from = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["wexample_filestate_python"]
omit = ["*/tests/*", "*/.venv/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if __name__ == .__main__.:", "if TYPE_CHECKING:", "@abstractmethod"]

[tool.filestate]
# These dev packages are removed from dependencies if not specified here.
keep = [
  "autoflake",
  "black",
  "libcst",
  "tomli",
  "pyupgrade",
  "isort",
  "flynt"
]
